import java.io.BufferedReader;
import java.io.IOException;
import java.io.InputStreamReader;

/*
 * This Java source file was generated by the Gradle 'init' task.
 */
public class App {

	public static void main(String[] args) throws IOException {

		BufferedReader stdin = new BufferedReader(new InputStreamReader(System.in));

		// 標準入力を1行ずつ読み出す。
		String line;
		while ((line = stdin.readLine()) != null) {
			CommandSelector.execute(line);
		}
	}
}
